--- a/shark-bait/index.html
+++ b/shark-bait/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script>
+    <!-- <script>
         // Shark tracking data
         const sharkData = [
             {dataset: "ACT.BKTIP", species: "blacktip shark", scientific: "Carcharhinus limbatus", lat: 37.11138, lon: -75.702383},
@@ -147,6 +147,6 @@
             const hit = map.hasFeatureAtPixel(pixel);
             map.getTarget().style.cursor = hit ? 'pointer' : '';
         });
-    </script>
+    </script> -->
   </body>
 </html>
